# cruvai-sn

./: .env.example  .gitignore  CLAUDE.md  CLAUDE.md.backup-20260417-082105  Makefile  PORT_REMAPPING.md  README.md  SETUP.md  docker-compose.yml
backend/: alembic.ini  fix_widgets.py  install_update_set.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 35fa009f15f0_add_story_attachments.py  5a0de0ccf20c_initial_schema.py  64ec093af124_add_org_api_keys_table.py  7c1f4a2e9d01_add_toolkit_ingestion_models.py  8d2a5b1c4e90_add_figma_linking.py  9b6e1481b41c_add_ai_gateway_agent_memory_and_.py  9e7c3b2a0f42_add_story_analysis_notes_ac_results.py  a7ee9eae5ad8_connector_overhaul_and_epic_support.py  cd5b71fde81c_add_control_plane_models.py
backend/app/: config.py  deps.py  main.py  seed.py
backend/app/agents/: analysis_agent.py  base_agent.py  catalog_agent.py  portal_agent.py
backend/app/connectors/: base.py  table_api.py
backend/app/ingestion/: __init__.py
backend/app/models/: __init__.py  agent.py  agent_memory.py  ai_gateway.py  artifact.py  audit.py  base.py  connector.py  control_plane.py  instance.py  job.py  org_settings.py  project.py  review.py  story.py  story_analysis.py  story_attachment.py  swarm.py  tenant.py  update_set.py
backend/app/services/: analysis_service.py  audit_service.py  auth_service.py  capability_service.py  connector_service.py  figma_service.py  guidance_service.py  llm_gateway.py  llm_service.py  note_service.py  playbook_service.py  prompt_service.py
backend/app/utils/: encryption.py
(+102 files in other folders)
