[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cruvai-servicenow"
version = "0.1.0"
description = "AI-powered ServiceNow development platform"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    "pgvector>=0.3.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.1.0",
    # HTTP client
    "httpx>=0.27.0",
    # Task queue
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    # AI / LLM
    "anthropic>=0.39.0",
    "openai>=1.50.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    # Config & utilities
    "pydantic-settings>=2.5.0",
    "cryptography>=43.0.0",
    "python-dotenv>=1.0.0",
    # Toolkit ingestion
    "python-frontmatter>=1.1.0",
    "markdown-it-py>=3.0.0",
    "minio>=7.2.0",
    # Templating (used by PromptService + GuidanceService)
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]
